Make spell containers show total point cost of children